some small improvements to css but need to fix the code blocks for smaller screens as they are causing horizontal scroll bar

--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body{
-    max-width: 2000px;
     margin: auto;
     font-family: 'Montserrat', sans-serif;
 }
@@ -160,7 +159,48 @@ aside {
     grid-area: 2 / 1 / 3 / 5;
 }
 
-@media all and (min-width: 600px) {
+@media all and (min-width: 1024px) and (max-width: 1660px) {
+    .aside { flex: 1; max-width: 220px; } 
+    .container {width: 100%;}
+    .content, .post, .post-paragraph { 
+        order: 2; 
+        flex: 2; 
+        width: 70%; }
+    .footer { order: 4; }
+    .post {max-width: 1000px;}
+ }
+
+@media all and (min-width: 768px) and (max-width: 1024px) {
+    .aside { flex: 1; } 
+    .container {width: 100%;}
+    .content, .post, .post-paragraph { 
+        order: 2; 
+        flex: 2; 
+        width: 70%; }
+    .footer { order: 4; }
+ }
+
+@media all and (min-width: 480px) and (max-width: 768px) {
+    .aside { order: 1; } 
+    .content, .post, .post-paragraph, .container { order: 2; width: 100%}
+    .container {padding: 0px;}
+    .footer { order: 4; }
+ }
+
+@media all and (max-width: 480px) {
+    .aside { order: 1; } 
+    .content, .post, .post-paragraph, .container { 
+        order: 2;
+        width: 100%;
+    }
+    .container > * {padding: 0px;}
+    .footer { order: 4; }
+ }
+
+
+
+
+/* @media all and (min-width: 600px) {
     .aside { flex: 1; }
   }
   
@@ -184,4 +224,4 @@ aside {
     .content, .post, .post-paragraph, .container { order: 2; width: 400px; }
     .container > * {padding: 0px;}
     .footer { order: 4; }
-}
+} */
